# Agente_documentale

./: .env.example  .gitignore  README.md  SETUP.md  USAGE.md  config.yaml  create_test_pdf.py  pyproject.toml  requirements.txt
docs/: MILESTONE1_POC.md  PHASE2_DATA_MODELS.md  PHASE3_TOOLS.md
src/: __init__.py  cli.py  workflow.py
src/agents/: __init__.py  base_agent.py  chapter_agent.py  classifier_agent.py  composer_agent.py
src/models/: __init__.py  block.py  chapter.py  enums.py  state.py
src/templates/: chapter.html  index.html
src/templates/css/: lecture-notes.css  math-document.css  presentation.css
src/tools/: __init__.py  latex_tools.py  pdf_tools.py  template_tools.py
src/utils/: __init__.py  checkpoint_manager.py  config_loader.py  logger.py
tests/: README.md  __init__.py  test_integration_workflow.py
tests/integration/: test_workflow.py
tests/mocks/: __init__.py  mock_llm.py
tests/unit/: test_checkpoint.py  test_models.py  test_tools.py
